# droppp

./: .clang-format  CMakeLists.txt  README.md  droppp_config.json
droppp_lib/: CMakeLists.txt
droppp_lib/include/: droppp.h
droppp_lib/src/: droppp.cc
src/: main.py
templates/: meta.c  type.c
test/: example.cc  example.h  example2.h
test/meta/: _gen.cc
